# proc_macro_abc

./: Cargo.toml  README.md
abc-macros/: Cargo.toml
abc-macros/src/: enum_ranges.rs  lib.rs
src/: lib.rs
tests/build_failures/: describe_fail.rs  describe_fail.stderr  words_fail.rs  words_fail.stderr
tests/words/: turbofish.txt
