[package]
name = "abc-macros"
description = "macros to support the abc crate"
license = "MIT"
version = "0.1.0"
authors = ["Eric Seppanen <eds@reric.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["extra-traits"]}
proc-macro2 = "1.0"
